clean-up, some styling

--- a/static/particl-page.css
+++ b/static/particl-page.css
@@ -7,6 +7,8 @@
   --font-heading: "Raleway_";
 }
 
+/* ------------------ GENERAL ------------------ */
+
 body {
   font-family: var(--font);
 }
@@ -15,6 +17,24 @@ h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-heading);
 }
 
+video {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+/* ------------------ LAYOUT ------------------ */
+
 main {
   background: var(--bg);
 }
+
+
+/* ------------------ SPECIFIC ------------------ */
+
+
+
+
+/* ------------------ PLUG-INS ------------------ */
+
+
