--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,20 +3,25 @@
     {{ .Content }}
   </article>
   {{/* Define a section to pull recent posts from. For Hugo 0.20 this will default to the section with the most number of pages. */}}
-  {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
+  {{ $postsSection := slice "post" }}
+  {{ $projectsSection := slice "project" }}
+  {{ $howtosSection := slice "howto" }}
+
+
   {{/* Create a variable with that section to use in multiple places. */}}
-  {{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
+  {{ $posts := where .Site.RegularPages "Section" "in" $postsSection }}
   {{/* Check to see if the section is defined for ranging through it */}}
-  {{ $section_count := len $section }}
-  {{ if ge $section_count 1 }}
+  {{ $posts_count := len $posts }}
+  {{ if ge $posts_count 1 }}
     {{/* Derive the section name  */}}
-    {{ $section_name := index (.Site.Params.mainSections) 0 }}
+    {{ $posts_name := index (.Site.Params.mainSections) 0 }}
 
     <div class="pa3 pa4-ns w-100 w-70-ns center">
-      {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
-       {{ with .Site.GetPage "section" $section_name }}
-          <h1 class="flex-none">
-            {{ $.Param "recent_copy" | default (i18n "recentTitle" .) }}
+      {{/* Use $posts_name to get the section title. Use "with" to only show it if it exists */}}
+       {{ with .Site.GetPage "section" $posts_name }}
+          <h1 class="flex-none mt0">
+            <!--{{ $.Param "recent_copy" | default (i18n "recentTitle" .) }}-->
+            Latest Articles
           </h1>
         {{ end }}
 
@@ -24,18 +29,18 @@
 
       <section class="w-100 mw8">
         {{/* Range through the first $n_posts items of the section */}}
-        {{ range (first $n_posts $section) }}
+        {{ range (first $n_posts $posts) }}
           <div class="relative w-100 mb4">
             {{ partial "summary-with-image.html" . }}
           </div>
         {{ end }}
       </section>
 
-      {{ if ge $section_count (add $n_posts 1) }}
+      {{ if ge $posts_count (add $n_posts 1) }}
       <section class="w-100">
         <!--h1 class="f3">{{ i18n "more" }}</h1>
         {{/* Now, range through the next four after the initial $n_posts items. Nest the requirements, "after" then "first" on the outside */}}
-        {{ range (first 4 (after $n_posts $section))  }}
+        {{ range (first 4 (after $n_posts $posts))  }}
           <h2 class="f5 fw4 mb4 dib mr3">
             <a href="{{ .Permalink }}" class="link black dim">
               {{ .Title }}
@@ -43,8 +48,8 @@
           </h2>
         {{ end }}-->
 
-        {{/* As above, Use $section_name to get the section title, and URL. Use "with" to only show it if it exists */}}
-        {{ with .Site.GetPage "section" $section_name }}
+        {{/* As above, Use $posts_name to get the section title, and URL. Use "with" to only show it if it exists */}}
+        {{ with .Site.GetPage "section" $posts_name }}
           <a href="{{ .Permalink }}" class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">{{ i18n "allTitle" . }}</a>
         {{ end }}
       </section>
