--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -16,7 +16,7 @@
           {{ end }}
         </ul>
       {{ end }}
-      {{ partialCached "social-follow.html" . }}
+      <!--{{ partialCached "social-follow.html" . }}-->
     </div>
   </div>
 </nav>
