--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -1,15 +1,35 @@
-  <div class="mb3 pa4 mid-gray overflow-hidden">
+{{ $featured_image := .Params.featured_image }}
+
+<div class="mid-gray overflow-hidden">
+
+  {{ if .Params.featured_image }}
+      {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
+    {{ $featured_image := (trim $featured_image "/") | absURL }}
+    <div class="w-100">
+      <a href="{{.Permalink}}" class="db grow">
+        <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
+      </a>
+    </div>
+  {{ end }}
+
+  <div class="pa4">
+
     {{ if .Date }}
       <div class="f6">
         {{ .Date.Format "January 2, 2006" }}
       </div>
     {{ end }}
-    <h1 class="f3 near-black">
+  
+    <h1 class="f3 mt3 near-black">
       <a href="{{ .Permalink }}" class="link black dim">
         {{ .Title }}
       </a>
     </h1>
+  
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       {{ .Summary  }}
     </div>
+
   </div>
+
+</div>
