[layout + styling] updates

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -45,17 +45,22 @@
       </p>
     </header>
     <div class="nested-copy-line-height lh-copy {{ $.Param "post_content_classes"  | default "serif"}} f4 nested-links nested-img mid-gray">
+
       {{- .Content -}}
+
       {{- partial "tags.html" . -}}
+
       {{ partial "social-share.html" . }}
-      <div class="mt6 instapaper_ignoref">
+
+      <!--div class="comments mt6 instapaper_ignoref">
       {{ if .Site.DisqusShortname }}
         {{ template "_internal/disqus.html" . }}
       {{ end }}
       {{ if .Site.Params.commentoEnable }}
         {{- partial "commento.html" . -}}
       {{ end }}
-      </div>
+      </div-->
+
     </div>
 
     <aside class="w-30-l mt6-l">
