--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -3,10 +3,10 @@
   <div class="flex-l mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
       <header>
-        <p class="f6 b helvetica tracked">
+        <p class="f6 b tracked">
           {{ humanize .Section | upper  }}
         </p>
-        <h1 class="f1">
+        <h1 class="f1 mt0">
           {{ .Title }}
         </h1>
       </header>
