--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <div class="pa3 pa4-ns w-100 w-70-ns center">
       {{/* Use $posts_name to get the section title. Use "with" to only show it if it exists */}}
        {{ with .Site.GetPage "section" $posts_name }}
-          <h1 class="flex-none mt0">
+          <h1 class="flex-none mt0 mw8 center">
             <!--{{ $.Param "recent_copy" | default (i18n "recentTitle" .) }}-->
             Latest Articles
           </h1>
@@ -27,7 +27,7 @@
 
       {{ $n_posts := $.Param "recent_posts_number" | default 3 }}
 
-      <section class="w-100 mw8">
+      <section class="w-100 mw8 center">
         {{/* Range through the first $n_posts items of the section */}}
         {{ range (first $n_posts $posts) }}
           <div class="relative w-100 mb4">
