--- a/layouts/post/list.html
+++ b/layouts/post/list.html
@@ -6,9 +6,9 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
       {{ .Content }}
     </section>
-    <aside class="flex-ns flex-wrap justify-around mt5">
+    <aside class="flex-ns flex-wrap justify-center mw9 center">
       {{ range .Paginator.Pages }}
-        <div class="relative w-100 w-30-l mb4 bg-white">
+        <div class="relative w-100 w-30-l ma3 bg-white">
           {{/*
           Note we can use `.Render` here for items just in this section, instead of a partial to pull in items for the list page. https://gohugo.io/functions/render/
           */}}
