--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,6 +1,7 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90 dib">
+      <img src="/particl-page-logo.svg" alt="Particl.page" class="logo">
       {{ .Site.Title }}
     </a>
     <div class="flex-l items-center">
