--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -63,7 +63,7 @@
 	{{ partial "site-header.html" . }}
 	{{ end }}
 
-	<main role="main">
+	<main role="main" class="content">
 		{{/* partial "breadcrumbs.html" . */}}
 		{{ block "main" . }}{{ end }}
 	</main>
