--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
+
 <article>
-	<section>
+	
+	<span>
 		{{- .Content -}}
-	</section>
+	</span>
+	
 	<section>
 		{{ range .Paginator.Pages }}
 		<div>
@@ -10,6 +13,9 @@
 		</div>
 		{{ end }}
 	</section>
+
 	{{- template "_internal/pagination.html" . -}}
+
 </article>
+
 {{ end }}
