--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,25 @@
+{{ define "page-meta" }}
+
+	<meta property="og:title" content="{{ with .Params.Title }}{{ . }} | {{ end }}{{ .Site.Title }}">
+	{{ with .Params.Summary }}<meta property="og:description" content="{{ . }}">{{ end }}
+	<meta property="og:url" content="{{ .Permalink }}">
+	
+	{{/* Specific meta for Articles */}}
+	<meta property="og:type" content="article">
+	{{ with (.Date.Format "2006-01-02") }}<meta property="article:published_time" content="{{ . }}">{{ end }}
+	{{ with (.Lastmod.Format "2006-01-02") }}<meta property="article:modified_time" content="{{ . }}">{{ end }}
+
+	{{/* Shows post's specific image if set, otherwise displays site's global o:g image */}}
+	{{ if (.Params.Image) }}
+	<meta property="og:image" content="{{ .Permalink }}{{ .Params.Image }}">
+	{{ else if (.Site.Params.siteImage) }}
+	<meta property="og:image" content="{{ $.Site.BaseURL }}{{ .Site.Params.SiteImage }}">
+	{{ end }}
+
+{{ end }}
+
+
+
 {{/* define "header" */}}
 {{/* We can override any block in the baseof file be defining it in the template */}}
 {{/* partial "page-header.html" . */}}
@@ -7,73 +29,75 @@
 
 {{ define "main" }}
 {{ $section := .Site.GetPage "section" .Section }}
-<article class="h-entry">
+<article class="card h-entry">
+	<div class="card-content">
 
-	<header>
-		<p>
-			{{/*
-			CurrentSection allows us to use the section title instead of inferring from the folder.
-			https://gohugo.io/variables/page/#section-variables-and-methods
-			*/}}
-			{{ with .CurrentSection.Title }}{{ . | upper }}{{ end }}
-		</p>
+		<header>
+			<p>
+				{{/*
+				CurrentSection allows us to use the section title instead of inferring from the folder.
+				https://gohugo.io/variables/page/#section-variables-and-methods
+				*/}}
+				{{ with .CurrentSection.Title }}{{ . | upper }}{{ end }}
+			</p>
 
-		{{ with .Params.Image }}
-			<div class="featured-image">
-				<img src="{{ . }}">
-			</div>
-		{{ end }}
+			{{ with .Params.Image }}
+				<div class="featured-image">
+					<img src="{{ . }}">
+				</div>
+			{{ end }}
 
-		<h1 class="p-name">
-			{{- .Title -}}
-		</h1>
+			<h1 class="title is-1 is-spaced p-name">
+				{{- .Title -}}
+			</h1>
 
-		{{ with .Params.Summary }}
-			<p class="p-summary">{{ . }}</p>
-		{{ end }}
+			{{ with .Params.Summary }}
+				<p class="subtitle is-4 p-summary">{{ . }}</p>
+			{{ end }}
 
 
-		{{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-		<p>
-			Written
-			<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-				{{- .Date.Format "January 2, 2006" -}}
-			</time>
-			by
-			<span class="p-author h-card">{{ .Params.Author }}</span>
-			&bull;
-			Updated
-			<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
-				{{- .Lastmod.Format "January 2, 2006" -}}
-			</time>
-		</p>
+			{{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
+			<p>
+				Written
+				<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+					{{- .Date.Format "January 2, 2006" -}}
+				</time>
+				by
+				<span class="p-author h-card">{{ .Params.Author }}</span>
+				&bull;
+				Updated
+				<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+					{{- .Lastmod.Format "January 2, 2006" -}}
+				</time>
+			</p>
 
-	</header>
+		</header>
 
-	{{ partial "toc.html" . }}
+		{{ partial "toc.html" . }}
 
-	<section class="e-content">
-		{{- .Content -}}
-	</section>
-	
-	<footer>
-		{{- partial "about-author.html" . -}}
-		{{- partial "tags.html" . -}}
-		{{- partial "categories.html" . -}}
-	</footer>
+		<section class="e-content">
+			{{- .Content -}}
+		</section>
+		
+		<footer>
+			{{- partial "about-author.html" . -}}
+			{{- partial "tags.html" . -}}
+			{{- partial "categories.html" . -}}
+		</footer>
 
-	<aside>
-		{{- partial "menu-contextual.html" . -}}
-  </aside>
-  
-  <aside>
-    {{ with .PrevInSection }}
-      <a class="previous" href="{{ .Permalink }}">{{ .Title }}</a>
-    {{ end }}
-    {{ with .NextInSection }}
-      <a class="next" href="{{ .Permalink }}">{{ .Title }}</a>
-    {{ end }}
-  </aside>
+		<aside>
+			{{- partial "menu-contextual.html" . -}}
+		</aside>
+		
+		<aside>
+			{{ with .PrevInSection }}
+				<a class="previous" href="{{ .Permalink }}">{{ .Title }}</a>
+			{{ end }}
+			{{ with .NextInSection }}
+				<a class="next" href="{{ .Permalink }}">{{ .Title }}</a>
+			{{ end }}
+		</aside>
 
+	</div>
 </article>
 {{ end }}
