--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,16 +1,37 @@
+{{ define "page-meta" }}
+
+	<meta property="og:title" content="{{ with .Params.Title }}{{ . }} | {{ end }}{{ .Site.Title }}">
+	{{ with .Params.Summary }}<meta property="og:description" content="{{ . }}">{{ end }}
+	<meta property="og:url" content="{{ .Permalink }}">
+	
+	{{/* Specific meta for Articles */}}
+	<meta property="og:type" content="article">
+	{{ with (.Date.Format "2006-01-02") }}<meta property="article:published_time" content="{{ . }}">{{ end }}
+	{{ with (.Lastmod.Format "2006-01-02") }}<meta property="article:modified_time" content="{{ . }}">{{ end }}
+
+	{{/* Shows post's specific image if set, otherwise displays site's global o:g image */}}
+	{{ if (.Params.Image) }}
+	<meta property="og:image" content="{{ .Permalink }}{{ .Params.Image }}">
+	{{ else if (.Site.Params.siteImage) }}
+	<meta property="og:image" content="{{ $.Site.BaseURL }}{{ .Site.Params.SiteImage }}">
+	{{ end }}
+
+{{ end }}
+
+
 {{/* define "header" }}
 {{ partial "page-header.html" . }}
 {{ end */}}
 
 
 {{ define "main" }}
-<div>
-	<article class="h-entry">
+<div class="card">
+	<article class="card-content h-entry">
 		<header>
 			<p>
 				{{ humanize .Section | upper }}
 			</p>
-			<h1 class="p-name">
+			<h1 class="title is-1 p-name">
 				{{ .Title }}
 			</h1>
 		</header>
