--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,14 +14,14 @@
 		</div>
 	{{ end }}
 
-	<section class="e-content">
+	<section class="e-content my-6">
 		{{- .Content -}}
 	</section>
 
 </article>
 
 
-<section class="article-list">
+<section class="article-list my-6">
 	<header>
 		<h2>Latest articles</h2>
 	</header>
@@ -38,7 +38,7 @@
 </section><!-- .article-list -->
 
 
-<section class="tutorials-list">
+<section class="tutorials-list my-6">
 	<header>
 		<h2>Latest tutorials</h2>
 	</header>
@@ -55,7 +55,7 @@
 </section><!-- .projects-list -->
 
 
-<section class="projects-list">
+<section class="projects-list my-6">
 	<header>
 		<h2>Latest projects</h2>
 	</header>
