--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,5 +1,5 @@
-<footer role="contentinfo">
-	<div>
+<footer class="footer" role="contentinfo">
+	<div class="container">
 		<a href="{{ .Site.BaseURL }}">
 			&copy; {{ with .Site.Params.copyrightSince }}{{ . }}&ndash;{{ end }}{{ now.Format "2006" }} {{ .Site.Title }}
 		</a>
