--- a/layouts/partials/social-follow-navbar.html
+++ b/layouts/partials/social-follow-navbar.html
@@ -2,77 +2,77 @@
 {{ $icon_size := "32px" }}
 
 {{ with .Param "facebook" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item facebook" rel="noopener" aria-label="follow on Facebook">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social facebook" rel="noopener" aria-label="follow on Facebook">
 	{{ partial "svg/facebook.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "twitter" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item twitter" rel="noopener" aria-label="follow on Twitter">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social twitter" rel="noopener" aria-label="follow on Twitter">
 	{{ partial "svg/twitter.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "instagram" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item instagram" rel="noopener" aria-label="follow on Instagram">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social instagram" rel="noopener" aria-label="follow on Instagram">
 	{{ partial "svg/instagram.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "youtube" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item youtube" rel="noopener" aria-label="follow on Youtube">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social youtube" rel="noopener" aria-label="follow on Youtube">
 	{{ partial "svg/youtube.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "github" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item github" rel="noopener" aria-label="follow on Github">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social github" rel="noopener" aria-label="follow on Github">
 	{{ partial "svg/github.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "linkedin" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item linkedin" rel="noopener" aria-label="follow on LinkedIn">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social linkedin" rel="noopener" aria-label="follow on LinkedIn">
 	{{ partial "svg/linkedin.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "gitlab" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item gitlab" rel="noopener" aria-label="follow on Gitlab">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social gitlab" rel="noopener" aria-label="follow on Gitlab">
 	{{ partial "svg/gitlab.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "medium" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item medium" rel="noopener" aria-label="follow on Medium">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social medium" rel="noopener" aria-label="follow on Medium">
 	{{ partial "svg/medium.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "behance" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item behance" rel="noopener" aria-label="follow on Behance">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social behance" rel="noopener" aria-label="follow on Behance">
 	{{ partial "svg/behance.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "mastodon" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item mastodon" rel="noopener" aria-label="follow on Mastodon">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social mastodon" rel="noopener" aria-label="follow on Mastodon">
 	{{ partial "svg/mastodon.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
 {{ end }}
 
 {{ with .Param "pixelfed" }}
-<a href="{{ . }}" target="_blank" rel="me" class="navbar-item pixelfed" rel="noopener" aria-label="follow on Pixelfed">
+<a href="{{ . }}" target="_blank" rel="me" class="navbar-item social pixelfed" rel="noopener" aria-label="follow on Pixelfed">
 	{{ partial "svg/pixelfed.svg" (dict "size" $icon_size) }}
 	{{/*- partial "new-window-icon.html" . -*/}}
 </a>
