--- a/layouts/partials/nav/bulma-navbar.html
+++ b/layouts/partials/nav/bulma-navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
 		<a class="navbar-item" href="{{ .Site.BaseURL }}">
+			<img class="logo" src="/particl-page-logo.svg" alt="Particl.page">
 			{{ .Site.Title }}<!--img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"-->
 		</a>
 
