--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,46 +32,7 @@
 <article class="card h-entry">
 	<div class="card-content">
 
-		<header>
-			<p>
-				{{/*
-				CurrentSection allows us to use the section title instead of inferring from the folder.
-				https://gohugo.io/variables/page/#section-variables-and-methods
-				*/}}
-				{{ with .CurrentSection.Title }}{{ . | upper }}{{ end }}
-			</p>
-
-			{{ with .Params.Image }}
-				<div class="featured-image">
-					<img src="{{ . }}">
-				</div>
-			{{ end }}
-
-			<h1 class="title is-1 is-spaced p-name">
-				{{- .Title -}}
-			</h1>
-
-			{{ with .Params.Summary }}
-				<p class="subtitle is-4 p-summary">{{ . }}</p>
-			{{ end }}
-
-
-			{{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-			<p>
-				Written
-				<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-					{{- .Date.Format "January 2, 2006" -}}
-				</time>
-				by
-				<span class="p-author h-card">{{ .Params.Author }}</span>
-				&bull;
-				Updated
-				<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
-					{{- .Lastmod.Format "January 2, 2006" -}}
-				</time>
-			</p>
-
-		</header>
+		{{ partial "page-header.html" . }}
 
 		{{ partial "toc.html" . }}
 
