--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -1,5 +1,39 @@
 <header>
-	<div>
-		{{ partial "nav/site-navigation.html" . }}
+
+	{{ with .CurrentSection.Title }}
+	<p>{{ . | upper }}</p>
+	{{ end }}
+
+	{{ with .Params.Image }}
+	<div class="featured-image">
+		<img src="{{ . }}">
 	</div>
+	{{ end }}
+	
+	<h1 class="title is-1 p-name is-spaced">
+		{{ .Title }}
+	</h1>
+	
+	{{ with .Params.Summary }}
+	<p class="subtitle is-4 p-summary">{{ . }}</p>
+	{{ end }}
+	
+	<p class="subtitle is-5 lead">
+		{{ .Params.Description }}
+	</p>
+
+	<p>
+		Written
+		<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+			{{- .Date.Format "January 2, 2006" -}}
+		</time>
+		by
+		<span class="p-author h-card">{{ .Params.Author }}</span>
+		&bull;
+		Updated
+		<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+			{{- .Lastmod.Format "January 2, 2006" -}}
+		</time>
+	</p>
+
 </header>
