layout updates & clean-up

--- a/layouts/page/pool.html
+++ b/layouts/page/pool.html
@@ -2,7 +2,7 @@
 
 <div class="card">
 	<article class="card-content h-entry">
-		{{ partial "page-header" . }}
+		{{/* partial "page-header" . */}}
 		<div class="e-content">
 			{{ .Content }}
 		</div>
