--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,7 +32,7 @@
 <article class="card h-entry">
 	<div class="card-content">
 
-		{{ partial "page-header.html" . }}
+		{{/* partial "page-header.html" . */}}
 
 		{{ partial "toc.html" . }}
 
