--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -27,7 +27,7 @@
 {{ define "main" }}
 <div class="card">
 	<article class="card-content h-entry">
-		{{ partial "page-header" . }}
+		{{/* partial "page-header" . */}}
 		<div class="e-content">
 			{{ .Content }}
 		</div>
