some layout & styling

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" role="contentinfo">
+<footer class="footer is-dark" role="contentinfo">
 	<div class="container">
 		<a href="{{ .Site.BaseURL }}">
 			&copy; {{ with .Site.Params.copyrightSince }}{{ . }}&ndash;{{ end }}{{ now.Format "2006" }} {{ .Site.Title }}
