--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,5 +1,5 @@
 <header>
-	<section class="hero is-medium is-dark">
+	<section class="hero is-medium is-dark is-gradient">
 
 		<div class="hero-head">
 			<div class="container">
