--- a/layouts/partials/nav/bulma-navbar.html
+++ b/layouts/partials/nav/bulma-navbar.html
@@ -17,11 +17,11 @@
 		{{ if .Site.Menus.main }}
 		<div class="navbar-start">
 
-			{{ range .Site.Menus.main }}
+			{{/* range .Site.Menus.main }}
 			<a href="{{ .URL }}" class="navbar-item">
 				{{ .Name }}
 			</a>
-			{{ end }}
+			{{ end */}}
 
 			<!--div class="navbar-item has-dropdown is-hoverable">
 				<a class="navbar-link">
@@ -42,7 +42,12 @@
 		{{ end }}
 
 		<div class="navbar-end">
-			{{ partial "social-follow-navbar.html" . }}
+			{{ range .Site.Menus.main }}
+			<a href="{{ .URL }}" class="navbar-item">
+				{{ .Name }}
+			</a>
+			{{ end }}
+			{{/* partial "social-follow-navbar.html" . */}}
 		</div>
 
 	</div>
