--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,44 +1,71 @@
 @charset "utf-8";
 
-// Particl.page colors
-$pp-primary: #56E3B1;
-$pp-bg-darker: #0C1010;
-$pp-bg: #101414;
-$pp-text-muted: #6D8484;
+:root {
+  --primary: #56E3B1;
+  --secondary: #5451E5;
+  --info: #0096E0;
+  --text: #FAFAFA;
+  --text-muted: #6D8484;
+  --text-darker: #4a5a5a;
+  --bg: #101414;
+  --bg-darker: #0C1010;
+  --bg-lighter: #151a1a;
+  --hr: #252D2D;
+}
 
-$pp-grad-top: #0C1010;
-$pp-grad-bottom: #030404;
-$pp-hr: #252D2D;
+$_primary: #56E3B1;
+$_secondary: #5451E5;
+$_info: #0096E0;
+$_text: #FAFAFA;
+$_text-muted: #6D8484;
+$_text-darker: #4a5a5a;
+$_bg: #101414;
+$_bg-darker: #0C1010;
+$_bg-lighter: #151a1a;
+$_hr: #252D2D;
 
 // Update Bulma's global variables
-//$scheme-main: $bg-black;
+$scheme-main: $_bg-lighter; // main foreground color (cards)
+$scheme-main-bis: $_bg-darker; // slightly darker fg (footer)
+$scheme-main-ter: $_bg-darker; // darker fg
+//$scheme-invert: $white; // opposite to fg
+//$scheme-invert-bis: $white; // slightly lighter opposite to fg
+//$scheme-invert-ter: $white; // lighter opposite to fg
+
+$text-strong: $_text; // brighter text color
+$text: $_text-muted; // text color
+$text-light: $_text-darker; // muted text color
 
 //$family-sans-serif: "Source Sans Pro", sans-serif;
+//$family-primary: $font-sans-serif;
+
 //$grey-dark: $pp-bg-darker;
 //$grey-light: $pp-bg-darker;
-$primary: $pp-primary;
-$link: $pp-primary;
+
+$primary: $_primary; // primary color
+$info: $_info;
+// $success: $green;
+// $warning: $yellow;
+// $danger: $red;
+// $light: $white-ter;
+// $dark: $grey-darker;
+
+$link: $_primary; // links, duh
+// $link-visited: $pp-primary; // links, duh
+// $link-hover: $pp-primary; // links, duh
+// $link-focus: $pp-primary; // links, duh
+// $link-active: $pp-primary; // links, duh
+
 //$widescreen-enabled: false;
 $fullhd-enabled: false;
 
 // Update some of Bulma's component variables
 //$body-background-color: $beige-lighter;
-$control-border-width: 4px;
-$input-border-color: transparent;
-$input-shadow: none;
+
 
 @import "~bulma/bulma";
 //@import "fonts";
 @import "mixins";
-
-:root {
-  --primary: #56E3B1;
-  --text: #222;
-  --text-muted: #6D8484;
-  --bg: #101414;
-  --bg-darker: #0C1010;
-  --hr: #252D2D;
-}
 
 html {
   background: var(--bg);
@@ -60,6 +87,21 @@ nav.navbar {
 .hero {
   &.is-gradient {
     @include gradient(#0C1010,#030404);
-    box-shadow: 0 1px #252D2D;
+    box-shadow: 0 1px var(--hr);
+    .subtitle {
+      color: var(--text-muted);
+    }
+    .meta {
+      color: var(--text-darker);
+    }
   }
 }
+
+footer.footer {
+  &.is-gradient {
+    @include gradient(#0C1010,#101414);
+    box-shadow: 0 -1px var(--hr);
+  }
+}
+
+
