--- a/layouts/partials/nav/sidebar.html
+++ b/layouts/partials/nav/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="panel mt-6 is-dark">
+<!--nav class="panel mt-6 is-dark">
   <p class="panel-heading">
     Search
   </p>
@@ -35,4 +35,4 @@
     </span>
     minireset.css
   </a>
-</nav>
+</nav-->
