--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -25,12 +25,12 @@
 
 
 {{ define "main" }}
-<div class="card">
-	<article class="card-content h-entry">
-		{{/* partial "page-header" . */}}
-		<div class="e-content">
-			{{ .Content }}
-		</div>
-	</article>
-</div>
+
+<article class="h-entry">
+	{{/* partial "page-header" . */}}
+	<div class="e-content">
+		{{ .Content }}
+	</div>
+</article>
+
 {{ end }}
