--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -20,11 +20,6 @@
 
 
 
-{{/* define "header" */}}
-{{/* We can override any block in the baseof file be defining it in the template */}}
-{{/* partial "page-header.html" . */}}
-{{/* end */}}
-
 
 
 {{ define "main" }}
@@ -59,4 +54,56 @@
 	</aside>
 
 </article>
+
+{{ end }}
+
+
+
+
+
+{{ define "sidebar" }}
+
+<h3 class="title is-5">Published</h3>
+
+<div class="card meta mb-6">
+  <div class="card-content">
+
+    {{ with .Date }}
+    <time class="dt-published" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+      {{- .Format "January 2, 2006" -}}
+    </time>
+    {{ end }}
+
+  </div>
+</div>
+
+
+{{ if .Params.Author }}
+  {{ partial "about-author.html" . }}
+{{ end }}
+
+
+<h3 class="title is-5 mt-6">Share</h3>
+
+<article class="panel card">
+  <a class="panel-block">
+    <span class="panel-icon">
+      <!-- icon -->
+    </span>
+    Tweet this
+  </a>
+  <a class="panel-block">
+    <span class="panel-icon">
+      <!-- icon -->
+    </span>
+    Like this
+  </a>
+  <a class="panel-block">
+    <span class="panel-icon">
+      <!-- icon -->
+    </span>
+    Reddit this
+  </a>
+</article>
+
 {{ end }}
