--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -5,8 +5,9 @@
   --secondary: #5451E5;
   --info: #0096E0;
   --text: #FAFAFA;
-  --text-muted: #6D8484;
+  --text-muted: #96ACAC; //--text-muted: #6D8484;
   --text-darker: #4a5a5a;
+  --text-darkest: #3f4747;
   --bg: #101414;
   --bg-darker: #0C1010;
   --bg-lighter: #151a1a;
@@ -18,7 +19,7 @@ $_primary-hover: darken($_primary, 15%);
 $_secondary: #5451E5;
 $_info: #0096E0;
 $_text: #FAFAFA;
-$_text-muted: #6D8484;
+$_text-muted: #96ACAC; //#6D8484;
 $_text-darker: #4a5a5a;
 $_text-darkest: #3f4747;
 $_bg: #101414;
@@ -75,6 +76,8 @@ $link-hover: $_primary-hover; // links, duh
 //$widescreen-enabled: false;
 $fullhd-enabled: false;
 
+$body-font-size: 1.1em;
+
 $tag-background-color: $_text-darkest;
 $tag-color: $_text;
 
@@ -84,3 +87,5 @@ $code-background: rgba($_primary, 0.1);
 $pre-background: $_bg-lighter;
 
 $card-shadow: 0 0.5em 1em -0.125em rgba($_bg-darker, 0.8), 0 0 0 1px rgba($_bg-darker, 1);
+
+$hr-background-color: $_hr;
